[package]
authors = ["AXONE"]
edition = "2021"
name = "axone-cognitarium"
rust-version = "1.75"
version = "6.0.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

[dev-dependencies]
base64 = "0.22.1"
cucumber = "0.21.1"
cw-multi-test.workspace = true
futures = "0.3.30"
serde_json = "1.0.128"
serde_yaml = "0.9.34"
testing.workspace = true

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[[test]]
harness = false
name = "cucumber"
path = "tests/e2e/main.rs"
